# unnamed_zulip_client

./: .gitignore  Cargo.toml
libzulip/: Cargo.toml  build.rs  clippy.toml
libzulip/examples/: messages.rs  server_settings.rs
libzulip/src/: config.rs  error.rs  lib.rs  narrow.rs  organizations.rs
libzulip/src/messages/: delete_message.rs  download_file.rs  edit_message.rs  emoji_reaction.rs  fetch_single_message.rs  history.rs  mod.rs  render_message.rs  send.rs  send_message.rs  upload_file.rs
