[package]
name = "libzulip"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", default-features = false, features = [
    "alloc",
    "async-await",
    "std",
] }
jiff = "0.1.13"
pisserror = "0.2.3"
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
    "http2",
    "multipart",
    "stream",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", default-features = false, features = [
    "macros",
    "tracing",
    "fs",
] }
tracing = { version = "0.1.40", features = ["async-await"] }
tempfile = "3.13.0"
url = "2.5.2"
urlencoding = "2.1.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = [
    "tracing",
    "env-filter",
] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
tokio = { version = "1.40.0", default-features = false, features = [
    "macros",
    "tracing",
    "fs",
    "rt",
    "rt-multi-thread",
] }

[build-dependencies]
built = { version = "0.7.4", features = ["semver", "git2"] }
